--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/css.css">
+    <script src="js/isclick.js"></script>
     <script src="js/text.js"></script>
     <script src="js/Canvas.js"></script>
-    <script src="js/TitleSceen.js"></script>
+    <script src="js/TitleScreen.js"></script>
     <script src="js/aspect.js"></script>
     <script src="js/Main.js"></script>
 </head>
