--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/css.css">
+    <script src="js/GameScreen.js"></script>
     <script src="js/isclick.js"></script>
     <script src="js/text.js"></script>
     <script src="js/Canvas.js"></script>
