--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/css.css">
+    <script src="js/EncountAnimation.js"></script>
     <script src="js/BattleScreen.js"></script>
     <script src="js/sprite.js"></script>
     <script src="js/GameScreen.js"></script>
     <script src="js/isclick.js"></script>
     <script src="js/text.js"></script>
-    
     <script src="js/TitleScreen.js"></script>
     <script src="js/Main.js"></script>
     <script src="js/aspect.js"></script>
