--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/css.css">
     <script src="js/aspect.js"></script>
-    <script src="js/EncountAnimation.js"></script>
+    <script src="js/animation/SkillSwitchAnimation.js"></script>
+    <script src="js/animation/EncountAnimation.js"></script>
     <script src="js/BattleScreen.js"></script>
     <script src="js/sprite.js"></script>
     <script src="js/GameScreen.js"></script>
