--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xcq7zps.css">
     <script src="js/aspect.js"></script>
     <script src="js/animation/SkillSwitchAnimation.js"></script>
     <script src="js/animation/EncountAnimation.js"></script>
