--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/aspect.js"></script>
     <script src="js/animation/SkillSwitchAnimation.js"></script>
     <script src="js/animation/EncountAnimation.js"></script>
+    <script src="js/MenuScreen.js"></script>
     <script src="js/BattleScreen.js"></script>
     <script src="js/sprite.js"></script>
     <script src="js/GameScreen.js"></script>
