--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <script src="js/sprite.js"></script>
     <script src="js/GameScreen.js"></script>
     <script src="js/isclick.js"></script>
+    <script src="js/parallelogram.js"></script>
     <script src="js/text.js"></script>
     <script src="js/TitleScreen.js"></script>
     <script src="js/Main.js"></script>
-    
-    
 </head>
 <body>
     <div id="app"></div>
