--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="js/animation/SkillSwitchAnimation.js"></script>
     <script src="js/animation/EncountAnimation.js"></script>
     <script src="js/circle.js"></script>
+    <script src="js/MenuSave.js"></script>
     <script src="js/MenuStatus.js"></script>
     <script src="js/MenuScreen.js"></script>
     <script src="js/BattleScreen.js"></script>
