--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="https://use.typekit.net/xcq7zps.css">
+    <script src="js/talk/chapter01.js"></script>
     <script src="js/db/SaveData.js"></script>
     <script src="js/aspect.js"></script>
     <script src="js/animation/SkillSwitchAnimation.js"></script>
