--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="https://use.typekit.net/xcq7zps.css">
+    <script src="js/map/Chapter01.js"></script>
     <script src="js/talk/chapter01.js"></script>
     <script src="js/db/SaveData.js"></script>
     <script src="js/aspect.js"></script>
     <script src="js/animation/SkillSwitchAnimation.js"></script>
     <script src="js/animation/EncountAnimation.js"></script>
+    <script src="js/MapSprite.js"></script>
     <script src="js/circle.js"></script>
     <script src="js/MenuSave.js"></script>
     <script src="js/MenuStatus.js"></script>
