--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="https://use.typekit.net/xcq7zps.css">
     <script src="js/db/SaveData.js"></script>
+    <script src="js/Image.js"></script>
     <script src="js/map/Chapter01.js"></script>
     <script src="js/talk/chapter01.js"></script>
     <script src="js/aspect.js"></script>
@@ -15,6 +16,7 @@
     <script src="js/animation/EncountAnimation.js"></script>
     <script src="js/MapSprite.js"></script>
     <script src="js/circle.js"></script>
+    <script src="js/effectSprite.js"></script>
     <script src="js/MenuSave.js"></script>
     <script src="js/MenuStatus.js"></script>
     <script src="js/MenuScreen.js"></script>
