--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" href="icon/A_8.ico" type="image/x-icon">
+    <link rel="icon" href="icon/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="https://use.typekit.net/xcq7zps.css">
     <script src="js/db/SaveData.js"></script>
