--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="icon/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="https://use.typekit.net/xcq7zps.css">
+    <script src="js/SkillText.js"></script>
     <script src="js/db/SaveData.js"></script>
     <script src="js/Image.js"></script>
     <script src="js/map/Chapter01.js"></script>
